[tool.poetry]
name = "repl_python3_beta_risgard-api"
version = "0.1.0"
description = ""
authors = ["karmakarmeghdip <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.0.1"
firebase-admin = "^5.0.0"
SQLAlchemy = "^1.4.18"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
